Corrected border radius clipping in flashcards

--- a/src/app/components/collection/flashcard-preview/flashcard-preview.component.scss
+++ b/src/app/components/collection/flashcard-preview/flashcard-preview.component.scss
@@ -38,6 +38,10 @@
 }
 
 .flashcard-preview-lower-text-container {
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    padding: 1em 2.2em;
+    padding-top: 0.5em;
     flex: 1;
 }
 
@@ -45,9 +49,6 @@
     display: flex;
     align-items: center;
     font-size: 1rem;
-    margin: 0;
-    padding: 1em 2.2em;
-    padding-top: 0.5em;
     background-color: $tertiary-background;
 }
 
